test/success/unit/_succ_value_basic_3.hs
x :: Bool
x = True
main = print "hello"