test/fail/integration/_fail_sem_expr_relnoteq_1.hs
x :: Bool
x = "hello" /= 3
main = print "hello"